package main.enums;

public enum Status {
    CHILD,
    ADULT,
    VIP
}